--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-900">
+  <body class="bg-gray-900">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
